<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/addTaskHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Add Tasks"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taskTextInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="My Task"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskHeading" />

    <EditText
        android:id="@+id/taskDescriptionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Do Something"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTextInput" />

    <Button
        android:id="@+id/addATaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Add Task"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskStateRadioGroup" />

    <TextView
        android:id="@+id/totalTaskCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Total tasks: 0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addATaskButton"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/taskStateRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDescriptionInput">

        <RadioButton
            android:id="@+id/taskNewRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New" />

        <RadioButton
            android:id="@+id/taskAssignedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Assigned" />

        <RadioButton
            android:id="@+id/taskProgressRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="In Progress" />

        <RadioButton
            android:id="@+id/taskCompleteradioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Complete" />
    </RadioGroup>

    <Button
        android:id="@+id/getPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Get Photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskStateRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/taskDescriptionInput" />

    <ImageView
        android:id="@+id/taskImagePreview"
        android:layout_width="152dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getPhotoButton"
        app:srcCompat="@drawable/ic_launcher_background" />

</androidx.constraintlayout.widget.ConstraintLayout>